welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:12: error: '=>' expected but integer literal found.
    case >3 => droite()
          ^Poucet:13: error: '=>' expected but integer literal found.
    case <2 => gauche()
          ^