welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var biscuit:Int
var count:Int
while (estSurBlanc()){
  biscuit = 0
  for (count <- 1 to 5){
    if (estSurBiscuit()){
      biscuit+=1
    }
    avance()
  }
  biscuit match{
    case >3 => droite()
    case <2 => gauche()
  }
}